--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "proj",
+  "name": "BeefUp",
   "version": "1.0.0",
-  "description": "",
+  "description": "This is an API project for a fictatious restaurant called BeefUp.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
   "author": "",
   "license": "ISC",
