--- a/package.json
+++ b/package.json
@@ -5,15 +5,25 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "devserver": "nodemon src/index.js -e js,hbs"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "chalk": "^4.1.1",
+    "express": "^4.17.1",
+    "express-session": "^1.17.2",
+    "hbs": "^4.1.2",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "mongo": "^0.1.0",
     "mongoose": "^5.12.14",
-    "nodemon": "^2.0.7"
+    "multer": "^1.4.2",
+    "nodemon": "^2.0.7",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "sharp": "^0.28.3",
+    "validator": "^13.6.0"
   }
 }
