--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^5.0.1",
     "chalk": "^4.1.1",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^4.5.0",
     "cookie-parser": "^1.4.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
